[metadata]
name = langevin_energy_model
description = A simple framework for energy models
long_description = file: README.md
url = https://github.com/davidlibland/langevin_energy_model
author = David Li-Bland
author_email = david.libland@gmail.com
classifiers =
    Development Status :: 4 - Beta
    License :: Other/Proprietary License
    Programming Language :: Python :: 3.7
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    cytoolz>=0.9.0
    numpy>=1.19.1
    pandas>=1.0.3
    scikit-learn>=0.23.1
    scipy>=1.5.0
    typing_extensions>=3.7.4.2
    tables>=3.5.2
    seaborn>=0.9.0
    matplotlib>=3.1.0
    gitpython>=3.0.0
    torch>=1.4.0
    ray>=0.8.4
zip_safe = False

[options.packages.find]
include =
    energy_model*

[options.package_data]
# for any package, include csv files
* =
    *.yml
    *.jinja2
    *.csv
    *.nl

[options.extras_require]
examples =
dev =
    dunamai==1.3.0
    pylint==2.6.0
    pytype==2021.4.9
    pytest>=6.0.1
    pytest-xdist==1.34.0
    pytest-cov>=2.10.0
    black==20.8b1
    hypothesis[numpy]==5.29.0
    nox>=2019.8.20
